src/sass/components/_showcase-card.scss
.showcase-card {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;

  & svg {
    width: 1rem;
    height: 1rem;
    opacity: 0;
  }

  &:hover {
    & svg {
      opacity: 1;
    }

    .showcase-card--title {
      text-decoration: underline;
    }
  }

  &--title {
    font-size: 1.2rem;
    font-weight: 600;
    color: var(--text-primary);

    @media (width <= 1280px) {
      font-size: 1rem;
    }
  }

  &--description {
    margin-top: 0.3rem;
    font-size: 1rem;
    line-height: 1.6;
    color: var(--text-secondary);

    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;

    @media (width <= 1280px) {
      margin-top: 0.2rem;
      font-size: 0.875rem;
    }

    @media (width <= 884px) {
      -webkit-line-clamp: 1;
    }

    @media (width <= 640px) {
      margin-top: 0.5rem;
    }
  }
}

.showcase-cover {
  width: 100%;
  height: 18.5rem;
  object-fit: cover;
  object-position: center center;
  display: block;

  @media (width <= 1280px) {
    height: 16.5rem;
  }

  @media (width <= 884px) {
    height: 12.5rem;
  }

  @media (width <= 640px) {
    height: 14rem;
  }

  @media (width <= 400px) {
    height: 13rem;
  }
}

